[gd_scene load_steps=2 format=3 uid="uid://dmtpsacm6elog"]

[ext_resource type="Script" path="res://src/rooms/RoomControl.gd" id="1"]

[node name="RoomControl" type="Node2D"]
process_mode = 3
script = ExtResource("1")

[node name="EventTimer" type="Timer" parent="."]
one_shot = true

[node name="Music" type="AudioStreamPlayer" parent="."]
bus = &"Music"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true
autostart = true

[connection signal="tree_exiting" from="." to="." method="_exit_tree"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
